# bg-generation-mandelbrot

./: CMakeLists.txt  README.md
.github/workflows/: cpp.yml
src/: fragment_shader.glsl  main.cpp  mandelbrot.hpp  vertex_shader.glsl
src/shaders/: blur.compute  fragment_shader.frag  fragment_shader.glsl  slime.compute  slime.frag  slime.vert  vertex_shader.glsl  vertex_shader.vert
